bug(link-button) set line-height to avoid vertical misalignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -111,6 +111,7 @@ html {
   border-radius: 4px;
   background-color: rgb(var(--color-rgb-primary));
   height: 0.5em;
+  line-height: 0.5em;
   transition: background-color 0.35s cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
